--- a/nextGame.html
+++ b/nextGame.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>3×3 Drag Puzzle — Cinematic</title>
+  <title>3×3 Drag Puzzle</title>
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
