--- a/surprise.html
+++ b/surprise.html
@@ -43,17 +43,17 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image.jpg" alt="Memory 1">
+              <img src="image/image.jpeg" alt="Memory 1">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image1.jpg" alt="Memory 2">
+              <img src="image/image1.jpeg" alt="Memory 2">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image2.jpg" alt="Memory 3">
+              <img src="image/image2.jpeg" alt="Memory 3">
             </div>
           </div>
           <div class="swiper-slide">
@@ -63,52 +63,27 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image4.jpg" alt="Memory 5">
+              <img src="image/image4.jpeg" alt="Memory 5">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image5.jpg" alt="Memory 6">
+              <img src="image/image5.jpeg" alt="Memory 6">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image6.jpg" alt="Memory 6">
+              <img src="image/image6.jpeg" alt="Memory 6">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image7.jpg" alt="Memory 6">
+              <img src="image/image7.jpeg" alt="Memory 6">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="image/image8.jpg" alt="Memory 6">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide-content">
-              <img src="image/image9.jpg" alt="Memory 6">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide-content">
-              <img src="image/image10.jpeg" alt="Memory 6">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide-content">
-              <img src="image/image11.jpeg" alt="Memory 6">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide-content">
-              <img src="image/image12.jpeg" alt="Memory 6">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide-content">
-              <img src="image/image13.jpeg" alt="Memory 6">
+              <img src="image/image8.jpeg" alt="Memory 6">
             </div>
           </div>
         </div>
