--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Shaymaa</title>
+<title>Happy Birthday Hinata</title>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&family=Great+Vibes&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/index.css">
 </head>
@@ -36,7 +36,7 @@
     <div class="date-badge">
       <span class="date-text">🎂 18th October 2025 🎂</span>
     </div>
-    <h1 class="birthday-title">Happy Birthday Shaymaa</h1>
+    <h1 class="birthday-title">Happy Birthday Hinata</h1>
     <div class="heart-decoration">
       <span>💖</span>
       <span>✨</span>
