Fixed some text and code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Start button stage -->
 <div class="start-stage" id="startStage">
-  <button class="start-btn" id="startBtn">✨ Press ✨</button>
+  <button class="start-btn" id="startBtn">✨ Start ✨</button>
 </div>
 
 <!-- Main content wrapper -->
@@ -34,7 +34,7 @@
   <!-- Birthday header with date and title -->
   <div class="birthday-header" id="birthdayHeader">
     <div class="date-badge">
-      <span class="date-text">🎂 18th October 2025 🎂</span>
+      <span class="date-text">🎂 1st October 2025 🎂</span>
     </div>
     <h1 class="birthday-title">Happy Birthday Hinata</h1>
     <div class="heart-decoration">
