--- a/surprise.html
+++ b/surprise.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Memory - Shaymaa</title>
+<title>Memory - Hinata</title>
 
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -34,7 +34,7 @@
     <span>✨</span>
     <span>💫</span>
   </div>
-  <h1 class="memory-title">Beautiful Girl</h1>
+  <h1 class="memory-title">Cute Girl</h1>
   
   <!-- Enhanced 3D Coverflow Slider -->
   <div class="slider-wrapper">
