--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Start button stage -->
 <div class="start-stage" id="startStage">
-  <button class="start-btn" id="startBtn">✨ Start ✨</button>
+  <button class="start-btn" id="startBtn">✨ Press ✨</button>
 </div>
 
 <!-- Main content wrapper -->
